# SFxxxProgrammer

./: .bashrc  .gitignore  CMakeLists.txt  Makefile  README.md
archives/: ChipInfoDb.json  ChipInfoDb.xml  ChipInfoDb_opt.json
docs/: FeatureList.md  SocketComm.md  USBCommandList.md
scripts/: format_db.sh  xml-format.py  xml-json.py
sim/: sim_flash_mem.cpp  sim_flash_mem.hpp  socket_sim_prog.cpp  socket_sim_prog.hpp
sim/doc/: README.md
sim/test/: test_sim_flash.cpp
tests/: test_databse.sh  test_flash_operation.sh  test_programmer_detect.sh  test_sim_flash.sh  test_skt_programmer.sh  test_socket_flash.sh  test_socket_protobuf.sh
umd/inc/: dp_config.h  dp_error.h  dp_logging.hpp  dp_profiler.hpp  dp_spi_flash_command_set.h  dp_type.h  programmer.hpp
umd/scripts/: gen_hal_proto.sh  hal_proto.proto
umd/sim/: sim_flash_mem.cpp  sim_flash_mem.hpp  socket_sim_flash.cpp  socket_sim_flash.hpp
umd/src/: flash_database.cpp  flash_database.hpp  flash_info.cpp  flash_info.hpp  flash_interface.cpp  flash_interface.hpp  hal_proto.pb.cc  hal_proto.pb.h  hal_skt_device.hpp  hal_usb_device.hpp  programmer.cpp  programmer.hpp  programmer_hal.hpp  programmer_interface.cpp  programmer_interface.hpp
umd/test/: dummy_programmer.hpp  flash_info.pb.cc  flash_info.pb.h  flash_info.proto  socket_flash.hpp  socket_programmer.hpp  t.cpp  test_database.cpp  test_flash_operation.cpp  test_programmer_detect.cpp  test_skt_flash.cpp  test_skt_prog.cpp
umd/test/socket_protobuf/: message.pb.cc  message.pb.h  socket_cli.cpp  socket_svr.cpp
